<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnCalendario"
        android:icon="@drawable/ic_calendar_month"
        android:title="@string/calendar_desc"
        android:contentDescription="@string/calendar_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnEstadisticas"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/stats_desc"
        android:contentDescription="@string/stats_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnCuenta"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/account_desc"
        android:contentDescription="@string/account_desc"
        app:showAsAction="ifRoom" />
</menu>